# rimer

./: Cargo.toml  README.org  TODO.org  default.nix  shell.nix
help/: rimer.txt  rimer_callback.txt  rimer_daemon_updater.txt  rimer_remote.txt  rimer_updater.txt
src/: client.rs  config.rs  main.rs  remote.rs  request.rs  response.rs  snapshot.rs  socket.rs  state.rs
src/daemon/: mod.rs
src/daemon/timers/: mod.rs
src/daemon/timers/timer/inner/: mod.rs
src/old/daemon/timers/timer/: mod.rs
src/old/daemon/timers/timer/inner/: state.rs  updater.rs
src/server/: mod.rs  timer.rs  updater.rs
