[package]
name = "rimer"
version = "0.1.1"
authors = ["Valeriy Litkovskyy <vlr.ltkvsk@protonmail.com>"]
edition = "2018"

[dependencies]
dirs = "3.0.1"
clap = "2.33.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
